deployment/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-app-ingress
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  rules:
  - host: app.homelab.internal.kailo.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-service
            port:
              number: 8080
  tls:
  - hosts:
    - app.local
    secretName: app-tls
